Flake8 tutorial always fail check

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,11 @@ version = 0.1.0
 
 [options]
 py_modules = flake8_COMSC_PSP
+install_requires =
+  flake8>=3.7
+  importlib-metadata>=0.9;python_version<"3.8"
+python_requires = >=3.6.1
+
+[options.entry_points]
+flake8.extension =
+   PSP=flake8_COMSC_PSP:Plugin
