--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,31 @@
 [metadata]
+
+# Data about the data concerning the program
+#
+#
+
 name = flake8_COMSC_PSP
 version = 0.1.1
 
+
 [options]
+
+# Setup options for running Flake8
+# Specifies minimum installation requirements, and the modules being used
+#
+
 py_modules = flake8_COMSC_PSP
 install_requires =
   flake8>=3.7
   importlib-metadata>=0.9;python_version<"3.9"
 python_requires = >=3.9
 
+
 [options.entry_points]
+
+# Utilises python setuptools entry_points 
+#
+#
+
 flake8.extension =
    PSP=flake8_COMSC_PSP:Plugin
