--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@
 #
 #
 
-name = flake8_COMSC_PSP
-version = 0.1.1
+name = COMSC_Plugin
+version = 0.1.2
 
 
 [options]
@@ -14,7 +14,7 @@ version = 0.1.1
 # Specifies minimum installation requirements, and the modules being used
 #
 
-py_modules = flake8_COMSC_PSP
+py_modules = COMSC_Plugin
 install_requires =
   flake8>=3.7
   importlib-metadata>=0.9;python_version<"3.9"
@@ -23,9 +23,9 @@ python_requires = >=3.9
 
 [options.entry_points]
 
-# Utilises python setuptools entry_points 
+# Utilises python setuptools entry_points
 #
 #
 
 flake8.extension =
-   PSP=flake8_COMSC_PSP:Plugin
+   PSP=COMSC_Plugin:Plugin
