Reconfigured setup.cfg

--- a/prototype/setup.cfg
+++ b/prototype/setup.cfg
@@ -4,8 +4,8 @@
 #
 #
 
-name = COMSC_Plugin
-version = 0.1.2
+name = Prototype
+version = 0.1.0
 
 
 [options]
@@ -14,7 +14,7 @@ version = 0.1.2
 # Specifies minimum installation requirements, and the modules being used
 #
 
-py_modules = COMSC_Plugin
+py_modules = Prototype
 install_requires =
   flake8>=3.7
   importlib-metadata>=0.9;python_version<"3.9"
@@ -28,8 +28,7 @@ python_requires = >=3.9
 #
 
 flake8.extension =
-   X1=COMSC_Plugin:Plugin
-<<<<<<< HEAD:tutorial/setup.cfg
+   P = Prototype:Plugin
 
 [flake8]
 # Ignore specific / groups of error codes
