--- a/prototype/setup.cfg
+++ b/prototype/setup.cfg
@@ -34,7 +34,17 @@ flake8.extension =
 # Ignore specific / groups of error codes
 # Various other settings
 
-# ignore =
-# max-line-length = 160
+ignore = F402, F403, F404, F405, F406, F407,
+    F501, F502, F503, F504, F505, F506, F507, F508, F509,
+    F521, F522, F523, F524, F525,
+    F601, F602,
+    F621, F622,
+    F631, F633, F634,
+    F701, F702, F703, F704, F705, F707,
+    F721, F722, F723,
+    F821, F822,
+    F901,
+    E999,
+    C901
+
 exclude = tests/*
-max-complexity = 10
