Code restructuring ongoing. Broke relative import of Squash as os.getcwd only gets Python working directory not where program called from

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 # Data about the data concerning the program
 
-name = COMSC_Linter
+name = Flake8_COMSC_Linter
 version = 0.1.0
 
 
@@ -9,7 +9,7 @@ version = 0.1.0
 # Setup options for running Flake8
 # Specifies minimum installation requirements, and the modules being used
 
-py_modules = COMSC_Linter
+py_modules = run
 install_requires =
   flake8>=3.7
   importlib-metadata>=0.9;python_version<"3.9"
@@ -20,7 +20,7 @@ python_requires = >=3.9
 # Utilises python setuptools entry_points
 
 flake8.extension =
-   P = COMSC_Linter:Plugin
+   P = run:Plugin
 
 [flake8]
 # Ignore specific / groups of error codes
