--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ version = 0.1.0
 # Setup options for running Flake8
 # Specifies minimum installation requirements, and the modules being used
 
-py_modules = run
+py_modules = Flake8_COMSC_Linter
 install_requires =
   flake8>=3.7
   importlib-metadata>=0.9;python_version<"3.9"
@@ -20,7 +20,7 @@ python_requires = >=3.9
 # Utilises python setuptools entry_points
 
 flake8.extension =
-   P = run:Plugin
+   P = Flake8_COMSC_Linter:Plugin
 
 [flake8]
 # Ignore specific / groups of error codes
