--- a/setup/setup.cfg
+++ b/setup/setup.cfg
@@ -10,11 +10,19 @@ version = 0.1.0
 # Specifies minimum installation requirements, and the modules being used
 
 py_modules = Flake8_COMSC_Linter
+
 install_requires =
   flake8>=3.7
   importlib-metadata>=0.9;python_version<"3.9"
+
 python_requires = >=3.9
 
+package_dir =
+  = src
+packages = find:
+
+[options.packages.find]
+where=src
 
 [options.entry_points]
 # Utilises python setuptools entry_points
