error removal various. Squash requires import but otherwise all running and error reporting going smoothly

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
 # Data about the data concerning the program
 
-name = Flake8_COMSC_Linter
-version = 0.1.0
+name = Linter
+version = 0.1.1
 
 
 [options]
 # Setup options for running Flake8
 # Specifies minimum installation requirements, and the modules being used
 
-py_modules = Flake8_COMSC_Linter
+py_modules = Linter
 
 install_requires =
   flake8>=3.7
@@ -28,7 +28,7 @@ where=src
 # Utilises python setuptools entry_points
 
 flake8.extension =
-   P = Flake8_COMSC_Linter:Plugin
+   P = Linter:Plugin
 
 [flake8]
 # Ignore specific / groups of error codes
