--- a/setup.cfg
+++ b/setup.cfg
@@ -19,10 +19,11 @@ python_requires = >=3.9
 
 package_dir =
   = src
+  = src/Errors
 packages = find:
 
 [options.packages.find]
-where=src
+where=src/Errors
 
 [options.entry_points]
 # Utilises python setuptools entry_points
