installation working again

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,11 +19,10 @@ python_requires = >=3.9
 
 package_dir =
   = src
-  = src/Errors
 packages = find:
 
 [options.packages.find]
-where=src/Errors
+where=src
 
 [options.entry_points]
 # Utilises python setuptools entry_points
