--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ flake8.extension =
 # Ignore specific / groups of error codes
 # Various other settings
 
-ignore = F402, F403, F404, F405, F406, F407,
+ignore = ( P, F402, F403, F404, F405, F406, F407,
     F501, F502, F503, F504, F505, F506, F507, F508, F509,
     F521, F522, F523, F524, F525,
     F601, F602,
@@ -45,6 +45,4 @@ ignore = F402, F403, F404, F405, F406, F407,
     F821, F822,
     F901,
     E999,
-    C901
-
-# exclude = ###
+    C901 )
