changed readme to recommend use of --enable-extension=P7 rather than P to reduce chance of installed plugin overlapping error codes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 
 name = Linter
-version = 0.1.1
+version = 1.0.217
 off_by_default = True
 include_package_data = True
 
@@ -24,7 +24,7 @@ where = .
 [options.entry_points]
 
 flake8.extension =
-  P = Linter:Plugin
+  P7 = Linter:Plugin
 
 [flake8]
 ignore = ( F402, F403, F404, F405, F406, F407,
