added authorship and my email address to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,12 @@
 [metadata]
 
 name = Linter
-version = 1.0.217
-include_package_data = True
+version = 1.0.223
+author = "Thomas Lea-Redmond"
+author_email =
+  Lea-RedmondT@cardiff.ac.uk
+  Lea-RedmondT_dev@outlook.com
+
 
 [options]
 py_modules = Linter
@@ -10,7 +14,7 @@ py_modules = Linter
 install_requires =
   flake8>=3.7
   importlib-metadata>=0.9
-
+include_package_data = True
 python_requires = >=3.9
 
 package_dir =
