Updated to make almost all unit test files redundant. UnitTestingV2 is capable of taking a csv file, reading the data, and doing input value vs expected value comparisons.Also possible to do input value comparisons vs ouptu type comparisons. Not as of yet capable of f(p): return p when f() is called beacause of the crash triggered because Python is an awful language

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ where = .
 [options.entry_points]
 
 flake8.extension =
-  P7 = Linter:Plugin
+  RP = Linter:Plugin
 
 [flake8]
 ignore = ( F402, F403, F404, F405, F406, F407,
